--- a/projetos/agencia-starseg/index.html
+++ b/projetos/agencia-starseg/index.html
@@ -10,13 +10,6 @@
 
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     <title>Starseg Agência</title>
-<!--
-
-Lava Landing Page
-
-https://templatemo.com/tm-540-lava-landing-page
-
--->
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -25,7 +18,7 @@ https://templatemo.com/tm-540-lava-landing-page
 
     <link rel="stylesheet" href="assets/css/owl-carousel.css">
     
-    <link rel="stylesheet" href="assets/css/templatemo-lava.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
