--- a/projetos/agencia-starseg/index.html
+++ b/projetos/agencia-starseg/index.html
@@ -24,17 +24,6 @@
 
 <body>
 
-    <!-- ***** Preloader Start ***** -->
-    <div id="preloader">
-        <div class="jumper">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
-    <!-- ***** Preloader End ***** -->
-
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
         <div class="container">
@@ -55,6 +44,7 @@
                             <li class="scroll-to-section"><a href="#avaliacoes" class="menu-item">Avaliações</a></li>
                             <li class="scroll-to-section"><a href="#duvidas" class="menu-item">Dúvidas</a></li>
                             <li class="scroll-to-section"><a href="#contato" class="menu-item">Contato</a></li>
+                            <!-- <li class="scroll-to-section"><a href="sites.html" class="menu-item">Sites</a></li> -->
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -508,7 +498,7 @@
             </div>
             <div class="col-lg-12">
                 <div class="sub-footer">
-                    <p>Copyright &copy; 2020 Site para Star Agência
+                    <p>Copyright &copy; 2020 Site para Starseg Agência
 
                     | Designed by <a rel="nofollow" href="#">Bruno Coelho</a></p>
                 </div>
