link do audote corrigido

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </p>
         </li>
         <li>
-          <a href="http://audote.epizy.com/" target="_blank">Audote</a>
+          <a href="http://audote.com/" target="_blank">Audote</a>
           <p>
             <strong>TCC</strong> do curso de desenvolvimento de sistemas da Etec
             Camargo Aranha, feito em parceria com a
